tests/compiler_directive/errors/if_syntax.li
#endif

#if true)

#if *

#if )

#if !!

#if

#if true(

#if true
